task3/otus/app/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-app
  template:
    metadata:
      labels:
        app: otus-app
    spec:
      containers:
      - name: otus
        image: makhnevvitalik/otus-task3:1.0.0
        ports:
        - containerPort: 8000
          name: app-port
        livenessProbe:
          httpGet:
            port: app-port
            path: /live
          initialDelaySeconds: 10
          periodSeconds: 3
          failureThreshold: 5
        readinessProbe:
          httpGet:
            port: app-port
            path: /health
          initialDelaySeconds: 1
          periodSeconds: 3
