task3/otus/app/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: otus-app-service
spec:
  selector:
    app: otus-app
  ports:
    - name: service-port
      protocol: TCP
      port: 8080
      targetPort: app-port
