task3/otus/app/templates/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: otus-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
   - host: arch.homework
     http:
      paths:
      - path: /otusapp(/|$)(.*)
        backend:
          serviceName: otus-app-service
          servicePort: service-port
